# tp-lab-6

./: .gitignore  CMakeLists.txt  Employee.cpp  EmployeeList.txt  Engineer.h  Factory.h  Manager.cpp  Personal.cpp  ProjectManager.h  README.md  Staff  a.out  data.csv  data.txt  employees.txt  input.txt  main.cpp  projects.csv  projects.txt  projectsInfo.txt  staff.txt  staffInfo.txt  workers.csv
data/: Employees.txt  Projects.txt  data1.txt  employees.json  projects.json  staff.txt
datafiles/: Employees.txt  Projects.txt
img/: projects.json  staff.json
include/: Cleaner.h  Company.h  Driver.h  Employee.h  Employee.hpp  Engineer.h  Factory.cpp  Factory.h  Heading.h  Interfaces.h  MakePeople.h  Manager.h  Personal.h  Personnel.h  Programmer.h  Project.h  ProjectBudget.h  ProjectManager.h  Projects.txt  Resource.h  SeniorManager.h  Staff.h  Staff.txt  TeamLeader.h  Tester.h  WorkBaseTime.h  headers.h  interfaces.h  main.cpp  resource.h
src/: CMakeLists.txt  Cleaner.cpp  Company.cpp  Driver.cpp  Employee.cpp  Employees.json  Employees.txt  Engineer.cpp  Factory.cpp  Heading.cpp  Interfaces.cpp  Interfaces.h  MakePeople.cpp  Manager.cpp  MyStaff.txt  Personal.cpp  Personals.txt  Personnel.cpp  Programmer.cpp  Project.cpp  ProjectBudget.cpp  ProjectManager.cpp  Projects.json  Projects.txt  SeniorManager.cpp  Staff.cpp  Staff.txt  StaffList.txt  TeamLeader.cpp  Tester.cpp  WorkBaseTime.cpp  data.csv  data.txt  employee.json  employees-1.txt  employees.csv  employees.txt  file_with_fullnames.txt  input.txt  listEmployees.txt  (+11 more)
test/: AllTests.cpp  CMakeLists.txt  test.cpp  (+3 more)
(+9 files in other folders)
